fix: v1.3.7 - fix nav button overflow, remove dropdown padding
- Add box-sizing: border-box to nav buttons to prevent hover overflow
- Remove extra padding from dropdown menus
- Use top: 100% instead of hardcoded top: 35px for dropdown positioning

--- a/src/views/EditorView/TopNavigationBar/TopNavigationBar.scss
+++ b/src/views/EditorView/TopNavigationBar/TopNavigationBar.scss
@@ -146,7 +146,7 @@
     .ModelsDropdown {
       z-index: 10000;
       position: absolute;
-      top: 35px;
+      top: 100%;
       left: 0;
       background-color: $darkThemeSecondColor;
       width: 250px;
@@ -158,7 +158,6 @@
       box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.75);
       display: flex;
       flex-direction: column;
-      padding: 5px 0;
 
       .DropDownMenuContentOption {
         display: flex;
@@ -200,6 +199,7 @@
     .language-toggle-button {
       color: white;
       box-shadow: none;
+      box-sizing: border-box;
       padding: 8px 12px;
       font-size: 14px;
       height: 32px;
